--- a/dev/proto/ui_catalog/assets/scss/themes/meower_dark.scss
+++ b/dev/proto/ui_catalog/assets/scss/themes/meower_dark.scss
@@ -24,37 +24,37 @@
 	//	Primary
 	--color-primary: var(--color-blue-grey-lighten-3);
 	--color-primary-light: var(--color-blue-grey-lighten-5);
-	--color-primary-dark: var(--color-blue-grey-lighten-1);
+	--color-primary-dark: var(--color-blue-grey);
 	--color-primary-text: var(--color-grey-darken-3);
 
 	//	Secondary
 	--color-secondary: var(--color-deep-orange);
-	--color-secondary-light: var(--color-deep-orange-lighten-2);
-	--color-secondary-dark: var(--color-deep-orange-darken-2);
+	--color-secondary-light: var(--color-deep-orange-lighten-3);
+	--color-secondary-dark: var(--color-deep-orange-darken-3);
 	--color-secondary-text: var(--color-grey-lighten-5);
 
 	//	Error
 	--color-error: var(--color-red);
-	--color-error-light: var(--color-red-lighten-2);
-	--color-error-dark: var(--color-red-darken-2);
+	--color-error-light: var(--color-red-lighten-3);
+	--color-error-dark: var(--color-red-darken-3);
 	--color-error-text: var(--color-grey-lighten-5);
 
 	//	Warning
 	--color-warning: var(--color-orange);
-	--color-warning-light: var(--color-orange-lighten-2);
-	--color-warning-dark: var(--color-orange-darken-2);
+	--color-warning-light: var(--color-orange-lighten-3);
+	--color-warning-dark: var(--color-orange-darken-3);
 	--color-warning-text: var(--color-grey-lighten-5);
 
 	//	Info
 	--color-info: var(--color-blue);
-	--color-info-light: var(--color-blue-lighten-2);
-	--color-info-dark: var(--color-blue-darken-2);
+	--color-info-light: var(--color-blue-lighten-3);
+	--color-info-dark: var(--color-blue-darken-3);
 	--color-info-text: var(--color-grey-lighten-5);
 
 	//	Success
 	--color-success: var(--color-green);
-	--color-success-light: var(--color-green-lighten-2);
-	--color-success-dark: var(--color-green-darken-2);
+	--color-success-light: var(--color-green-lighten-3);
+	--color-success-dark: var(--color-green-darken-3);
 	--color-success-text: var(--color-grey-lighten-5);
 
 	//	Common
