--- a/dev/proto/ui_catalog/assets/scss/components/button_group.scss
+++ b/dev/proto/ui_catalog/assets/scss/components/button_group.scss
@@ -24,7 +24,10 @@
 		display: inline-block;
 		padding: var(--spacing-sm) var(--spacing-lg);
 		cursor: pointer;
-		transition: opacity 0.3s 0s ease-in-out;
+		transition:
+			background-color 0.3s 0s ease-in-out,
+			color 0.3s 0s ease-in-out,
+			border-color 0.3s 0s ease-in-out;
 
 		&:first-child
 		{
@@ -128,6 +131,11 @@
 			{
 				border-color: var(--color-primary-dark);
 			}
+
+			&:hover:not(:disabled)
+			{
+				background-color: var(--color-primary-dark);
+			}
 		}
 
 		&.text
@@ -136,6 +144,12 @@
 			{
 				background-color: transparent;
 				color: var(--color-primary);
+
+				&:hover:not(:disabled)
+				{
+					background-color: transparent;
+					color: var(--color-primary-light);
+				}
 			}
 		}
 
@@ -146,6 +160,13 @@
 				background-color: transparent;
 				color: var(--color-primary);
 				border-color: var(--color-primary);
+
+				&:hover:not(:disabled)
+				{
+					background-color: transparent;
+					color: var(--color-primary-light);
+					border-color: var(--color-primary-light);
+				}
 			}
 		}
 	}
@@ -161,6 +182,11 @@
 			{
 				border-color: var(--color-secondary-dark);
 			}
+
+			&:hover:not(:disabled)
+			{
+				background-color: var(--color-secondary-dark);
+			}
 		}
 
 		&.text
@@ -169,6 +195,12 @@
 			{
 				background-color: transparent;
 				color: var(--color-secondary);
+
+				&:hover:not(:disabled)
+				{
+					background-color: transparent;
+					color: var(--color-secondary-light);
+				}
 			}
 		}
 
@@ -179,6 +211,13 @@
 				background-color: transparent;
 				color: var(--color-secondary);
 				border-color: var(--color-secondary);
+
+				&:hover:not(:disabled)
+				{
+					background-color: transparent;
+					color: var(--color-secondary-light);
+					border-color: var(--color-secondary-light);
+				}
 			}
 		}
 	}
@@ -194,6 +233,11 @@
 			{
 				border-color: var(--color-error-dark);
 			}
+
+			&:hover:not(:disabled)
+			{
+				background-color: var(--color-error-dark);
+			}
 		}
 
 		&.text
@@ -202,6 +246,12 @@
 			{
 				background-color: transparent;
 				color: var(--color-error);
+
+				&:hover:not(:disabled)
+				{
+					background-color: transparent;
+					color: var(--color-error-light);
+				}
 			}
 		}
 
@@ -212,6 +262,13 @@
 				background-color: transparent;
 				color: var(--color-error);
 				border-color: var(--color-error);
+
+				&:hover:not(:disabled)
+				{
+					background-color: transparent;
+					color: var(--color-error-light);
+					border-color: var(--color-error-light);
+				}
 			}
 		}
 	}
@@ -227,6 +284,11 @@
 			{
 				border-color: var(--color-warning-dark);
 			}
+
+			&:hover:not(:disabled)
+			{
+				background-color: var(--color-warning-dark);
+			}
 		}
 
 		&.text
@@ -235,6 +297,12 @@
 			{
 				background-color: transparent;
 				color: var(--color-warning);
+
+				&:hover:not(:disabled)
+				{
+					background-color: transparent;
+					color: var(--color-warning-light);
+				}
 			}
 		}
 
@@ -245,6 +313,13 @@
 				background-color: transparent;
 				color: var(--color-warning);
 				border-color: var(--color-warning);
+
+				&:hover:not(:disabled)
+				{
+					background-color: transparent;
+					color: var(--color-warning-light);
+					border-color: var(--color-warning-light);
+				}
 			}
 		}
 	}
@@ -260,6 +335,11 @@
 			{
 				border-color: var(--color-info-dark);
 			}
+
+			&:hover:not(:disabled)
+			{
+				background-color: var(--color-info-dark);
+			}
 		}
 
 		&.text
@@ -268,6 +348,12 @@
 			{
 				background-color: transparent;
 				color: var(--color-info);
+
+				&:hover:not(:disabled)
+				{
+					background-color: transparent;
+					color: var(--color-info-light);
+				}
 			}
 		}
 
@@ -278,6 +364,13 @@
 				background-color: transparent;
 				color: var(--color-info);
 				border-color: var(--color-info);
+
+				&:hover:not(:disabled)
+				{
+					background-color: transparent;
+					color: var(--color-info-light);
+					border-color: var(--color-info-light);
+				}
 			}
 		}
 	}
@@ -293,6 +386,11 @@
 			{
 				border-right-color: var(--color-success-dark);
 			}
+
+			&:hover:not(:disabled)
+			{
+				background-color: var(--color-success-dark);
+			}
 		}
 
 		&.text
@@ -301,6 +399,12 @@
 			{
 				background-color: transparent;
 				color: var(--color-success);
+
+				&:hover:not(:disabled)
+				{
+					background-color: transparent;
+					color: var(--color-success-light);
+				}
 			}
 		}
 
@@ -311,6 +415,13 @@
 				background-color: transparent;
 				color: var(--color-success);
 				border-color: var(--color-success);
+
+				&:hover:not(:disabled)
+				{
+					background-color: transparent;
+					color: var(--color-success-light);
+					border-color: var(--color-success-light);
+				}
 			}
 		}
 	}
@@ -322,21 +433,11 @@
 
 	> button, a
 	{
-		&:hover
-		{
-			opacity: var(--opacity-hover);
-		}
-
 		&:disabled
 		{
 			background-color: var(--color-disabled);
 			color: var(--color-disabled-text);
 			cursor: not-allowed;
-
-			&:hover
-			{
-				opacity: var(--opacity-100);
-			}
 		}
 	}
 
