--- a/dev/proto/ui_catalog/assets/scss/components/floating_button.scss
+++ b/dev/proto/ui_catalog/assets/scss/components/floating_button.scss
@@ -11,7 +11,7 @@
 	border-radius: var(--radius-circle);
 	cursor: pointer;
 	box-shadow: var(--shadow-md);
-	transition: opacity 0.3s 0s ease-in-out;
+	transition: background-color 0.3s 0s ease-in-out;
 
 
 	//--------------------------------------------------------------------------
@@ -38,6 +38,11 @@
 		background-color: var(--color-primary);
 		color: var(--color-primary-text);
 
+		&:hover:not(:disabled)
+		{
+			background-color: var(--color-primary-dark);
+		}
+
 		.ui_icon { background-color: var(--color-primary-text); }
 	}
 
@@ -45,6 +50,11 @@
 	{
 		background-color: var(--color-secondary);
 		color: var(--color-secondary-text);
+
+		&:hover:not(:disabled)
+		{
+			background-color: var(--color-secondary-dark);
+		}
 
 		.ui_icon { background-color: var(--color-secondary-text); }
 	}
@@ -54,6 +64,11 @@
 		background-color: var(--color-error);
 		color: var(--color-error-text);
 
+		&:hover:not(:disabled)
+		{
+			background-color: var(--color-error-dark);
+		}
+
 		.ui_icon { background-color: var(--color-error-text); }
 	}
 
@@ -61,6 +76,11 @@
 	{
 		background-color: var(--color-warning);
 		color: var(--color-warning-text);
+
+		&:hover:not(:disabled)
+		{
+			background-color: var(--color-warning-dark);
+		}
 
 		.ui_icon { background-color: var(--color-warning-text); }
 	}
@@ -70,6 +90,11 @@
 		background-color: var(--color-info);
 		color: var(--color-info-text);
 
+		&:hover:not(:disabled)
+		{
+			background-color: var(--color-info-dark);
+		}
+
 		.ui_icon { background-color: var(--color-info-text); }
 	}
 
@@ -77,6 +102,11 @@
 	{
 		background-color: var(--color-success);
 		color: var(--color-success-text);
+
+		&:hover:not(:disabled)
+		{
+			background-color: var(--color-success-dark);
+		}
 
 		.ui_icon { background-color: var(--color-success-text); }
 	}
@@ -86,11 +116,6 @@
 	//	States
 	//--------------------------------------------------------------------------
 
-	&:hover
-	{
-		opacity: var(--opacity-hover);
-	}
-
 	&:disabled
 	{
 		background-color: var(--color-disabled);
@@ -98,10 +123,5 @@
 		cursor: not-allowed;
 
 		.ui_icon { background-color: var(--color-disabled-text); }
-
-		&:hover
-		{
-			opacity: var(--opacity-100);
-		}
 	}
 }
