chore: Update UI catalog

--- a/dev/proto/ui_catalog/assets/scss/components/floating_button.scss
+++ b/dev/proto/ui_catalog/assets/scss/components/floating_button.scss
@@ -1,5 +1,15 @@
 //------------------------------------------------------------------------------
 //	UI floating button
+//
+//
+//	# Usage
+//
+//	```html
+//	<button class="ui_floating_button">
+//	 <div class="ui_icon icon_plus"></div>
+//	 <span>Plus</span>
+//	</button>
+//	```
 //------------------------------------------------------------------------------
 
 .ui_floating_button
