--- a/dev/proto/ui_catalog/assets/scss/components/heading.scss
+++ b/dev/proto/ui_catalog/assets/scss/components/heading.scss
@@ -1,5 +1,12 @@
 //------------------------------------------------------------------------------
 //	UI heading
+//
+//
+//	# Usage
+//
+//	```html
+//	<h1 class="ui_heading h1">Heading 1</h1>
+//	```
 //------------------------------------------------------------------------------
 
 .ui_heading
