--- a/dev/proto/ui_catalog/assets/scss/components/icon.scss
+++ b/dev/proto/ui_catalog/assets/scss/components/icon.scss
@@ -1,5 +1,12 @@
 //------------------------------------------------------------------------------
 //	UI Icon
+//
+//
+//	# Usage
+//
+//	```html
+//	<div class="ui_icon icon_plus"></div>
+//	```
 //------------------------------------------------------------------------------
 
 .ui_icon
