--- a/dev/proto/ui_catalog/assets/scss/components/radio.scss
+++ b/dev/proto/ui_catalog/assets/scss/components/radio.scss
@@ -1,5 +1,12 @@
 //------------------------------------------------------------------------------
 //	UI radio
+//
+//
+//	# Usage
+//
+//	```html
+//	<input type="radio" class="ui_radio">
+//	```
 //------------------------------------------------------------------------------
 
 .ui_radio
