--- a/dev/proto/ui_catalog/assets/scss/themes/meower_dark.scss
+++ b/dev/proto/ui_catalog/assets/scss/themes/meower_dark.scss
@@ -60,12 +60,12 @@
 	//	Common
 	--color-background: var(--color-blue-grey-darken-4);
 	--color-background-text: var(--color-grey-lighten-5);
-	--color-surface: var(--color-blue-grey-darken-4);
-	--color-surface-text: var(--color-grey-lighten-3);
+	--color-surface: var(--color-blue-grey-darken-2);
+	--color-surface-text: var(--color-grey-lighten-4);
 
 	//	States
 	--color-disabled: var(--color-grey-darken-1);
-	--color-disabled-text: var(--color-grey-ligten-1);
+	--color-disabled-text: var(--color-grey-lighten-1);
 
 
 	//--------------------------------------------------------------------------
