--- a/dev/proto/ui_catalog/assets/scss/components/icon.scss
+++ b/dev/proto/ui_catalog/assets/scss/components/icon.scss
@@ -72,9 +72,39 @@
 		-webkit-mask-image: var(--icon-svg-plus);
 	}
 
+	&.icon_minus
+	{
+		mask-image: var(--icon-svg-minus);
+		-webkit-mask-image: var(--icon-svg-minus);
+	}
+
 	&.icon_check
 	{
 		mask-image: var(--icon-svg-check);
 		-webkit-mask-image: var(--icon-svg-check);
+	}
+
+	&.icon_caret_up
+	{
+		mask-image: var(--icon-svg-caret-up);
+		-webkit-mask-image: var(--icon-svg-caret-up);
+	}
+
+	&.icon_caret_down
+	{
+		mask-image: var(--icon-svg-caret-down);
+		-webkit-mask-image: var(--icon-svg-caret-down);
+	}
+
+	&.icon_caret_right
+	{
+		mask-image: var(--icon-svg-caret-right);
+		-webkit-mask-image: var(--icon-svg-caret-right);
+	}
+
+	&.icon_caret_left
+	{
+		mask-image: var(--icon-svg-caret-left);
+		-webkit-mask-image: var(--icon-svg-caret-left);
 	}
 }
