chore: Update UI catalog

--- a/dev/proto/ui_catalog/assets/scss/common/overflow.scss
+++ b/dev/proto/ui_catalog/assets/scss/common/overflow.scss
@@ -1,8 +1,11 @@
 //------------------------------------------------------------------------------
-//	Common styles
+//	Overflow
 //------------------------------------------------------------------------------
 
-@forward "flex";
-@forward "overflow";
-@forward "spacer";
-@forward "typography";
+.scroll
+{
+	overflow: scroll;
+
+	&_x { overflow-x: scroll; }
+	&_y { overflow-y: scroll; }
+}
