--- a/dev/proto/ui_catalog/assets/scss/components/range_slider.scss
+++ b/dev/proto/ui_catalog/assets/scss/components/range_slider.scss
@@ -16,7 +16,7 @@
 	width: 100%;
 	max-width: var(--size-7xl);
 	border-radius: var(--radius-circle);
-	background-color: var(--color-surface);
+	background-color: var(--color-filled);
 	cursor: pointer;
 
 	&::-webkit-slider-thumb,
