--- a/dev/proto/ui_catalog/assets/scss/components/switch.scss
+++ b/dev/proto/ui_catalog/assets/scss/components/switch.scss
@@ -15,7 +15,7 @@
 	width: var(--size-xl);
 	height: var(--size-sm);
 	border-radius: var(--radius-circle);
-	background-color: var(--color-surface);
+	background-color: var(--color-filled);
 	position: relative;
 	cursor: pointer;
 
