--- a/dev/proto/ui_catalog/assets/scss/themes/meower_light.scss
+++ b/dev/proto/ui_catalog/assets/scss/themes/meower_light.scss
@@ -63,6 +63,13 @@
 	--color-surface: var(--color-blue-grey-lighten-4);
 	--color-surface-text: var(--color-grey-darken-3);
 
+	--color-filled: var(--color-blue-grey-accent-2);
+	--color-filled-light: var(--color-blue-grey-accent-1);
+	--color-filled-dark: var(--color-grey-darken-3);
+	--color-border: var(--color-blue-grey-accent-4);
+	--color-border-light: var(--color-blue-grey-accent-3);
+	--color-border-dark: var(--color-black);
+
 	//	States
 	--color-disabled: var(--color-grey-lighten-1);
 	--color-disabled-text: var(--color-grey-darken-1);
