--- a/dev/proto/ui_catalog/assets/scss/common/spacer.scss
+++ b/dev/proto/ui_catalog/assets/scss/common/spacer.scss
@@ -1,5 +1,5 @@
 //------------------------------------------------------------------------------
-//	Spacing
+//	Spacer
 //------------------------------------------------------------------------------
 
 //	Margin
