chore: Update UI catalog

--- a/dev/proto/ui_catalog/assets/scss/components/index.scss
+++ b/dev/proto/ui_catalog/assets/scss/components/index.scss
@@ -2,15 +2,8 @@
 //	Component styles
 //------------------------------------------------------------------------------
 
+@forward "inputs/index";
+
 @forward "box";
-@forward "button";
-@forward "button_group";
-@forward "checkbox";
-@forward "floating_button";
 @forward "heading";
 @forward "icon";
-@forward "radio";
-@forward "range_slider";
-@forward "select";
-@forward "switch";
-@forward "text_field";
