--- a/dev/proto/ui_catalog/assets/scss/components/inputs/button_group.scss
+++ b/dev/proto/ui_catalog/assets/scss/components/inputs/button_group.scss
@@ -136,6 +136,17 @@
 			{
 				background-color: var(--color-primary-dark);
 			}
+
+			&.active
+			{
+				background-color: var(--color-primary-dark);
+				border-color: var(--color-primary-light);
+
+				&:hover
+				{
+					color: var(--color-primary-light);
+				}
+			}
 		}
 
 		&.text
@@ -149,6 +160,11 @@
 				{
 					background-color: transparent;
 					color: var(--color-primary-light);
+				}
+
+				&.active
+				{
+					border-color: var(--color-primary-dark);
 				}
 			}
 		}
@@ -166,6 +182,20 @@
 					background-color: transparent;
 					color: var(--color-primary-light);
 					border-color: var(--color-primary-light);
+				}
+
+				&.active
+				{
+					background-color: var(--color-primary);
+					color: var(--color-primary-text);
+					border-color: var(--color-primary-light);
+
+					&:hover:not(:disabled)
+					{
+						background-color: var(--color-primary);
+						color: var(--color-primary-light);
+						border-color: var(--color-primary-light);
+					}
 				}
 			}
 		}
@@ -187,6 +217,17 @@
 			{
 				background-color: var(--color-secondary-dark);
 			}
+
+			&.active
+			{
+				background-color: var(--color-secondary-dark);
+				border-color: var(--color-secondary-light);
+
+				&:hover
+				{
+					color: var(--color-secondary-light);
+				}
+			}
 		}
 
 		&.text
@@ -200,6 +241,11 @@
 				{
 					background-color: transparent;
 					color: var(--color-secondary-light);
+				}
+
+				&.active
+				{
+					border-color: var(--color-secondary-dark);
 				}
 			}
 		}
@@ -217,6 +263,20 @@
 					background-color: transparent;
 					color: var(--color-secondary-light);
 					border-color: var(--color-secondary-light);
+				}
+
+				&.active
+				{
+					background-color: var(--color-secondary);
+					color: var(--color-secondary-text);
+					border-color: var(--color-secondary-light);
+
+					&:hover:not(:disabled)
+					{
+						background-color: var(--color-secondary);
+						color: var(--color-secondary-light);
+						border-color: var(--color-secondary-light);
+					}
 				}
 			}
 		}
@@ -238,6 +298,17 @@
 			{
 				background-color: var(--color-error-dark);
 			}
+
+			&.active
+			{
+				background-color: var(--color-error-dark);
+				border-color: var(--color-error-light);
+
+				&:hover
+				{
+					color: var(--color-error-light);
+				}
+			}
 		}
 
 		&.text
@@ -251,6 +322,11 @@
 				{
 					background-color: transparent;
 					color: var(--color-error-light);
+				}
+
+				&.active
+				{
+					border-color: var(--color-error-dark);
 				}
 			}
 		}
@@ -268,6 +344,20 @@
 					background-color: transparent;
 					color: var(--color-error-light);
 					border-color: var(--color-error-light);
+				}
+
+				&.active
+				{
+					background-color: var(--color-error);
+					color: var(--color-error-text);
+					border-color: var(--color-error-light);
+
+					&:hover:not(:disabled)
+					{
+						background-color: var(--color-error);
+						color: var(--color-error-light);
+						border-color: var(--color-error-light);
+					}
 				}
 			}
 		}
@@ -289,6 +379,17 @@
 			{
 				background-color: var(--color-warning-dark);
 			}
+
+			&.active
+			{
+				background-color: var(--color-warning-dark);
+				border-color: var(--color-warning-light);
+
+				&:hover
+				{
+					color: var(--color-warning-light);
+				}
+			}
 		}
 
 		&.text
@@ -302,6 +403,11 @@
 				{
 					background-color: transparent;
 					color: var(--color-warning-light);
+				}
+
+				&.active
+				{
+					border-color: var(--color-warning-dark);
 				}
 			}
 		}
@@ -319,6 +425,20 @@
 					background-color: transparent;
 					color: var(--color-warning-light);
 					border-color: var(--color-warning-light);
+				}
+
+				&.active
+				{
+					background-color: var(--color-warning);
+					color: var(--color-warning-text);
+					border-color: var(--color-warning-light);
+
+					&:hover:not(:disabled)
+					{
+						background-color: var(--color-warning);
+						color: var(--color-warning-light);
+						border-color: var(--color-warning-light);
+					}
 				}
 			}
 		}
@@ -340,6 +460,17 @@
 			{
 				background-color: var(--color-info-dark);
 			}
+
+			&.active
+			{
+				background-color: var(--color-info-dark);
+				border-color: var(--color-info-light);
+
+				&:hover
+				{
+					color: var(--color-info-light);
+				}
+			}
 		}
 
 		&.text
@@ -353,6 +484,11 @@
 				{
 					background-color: transparent;
 					color: var(--color-info-light);
+				}
+
+				&.active
+				{
+					border-color: var(--color-info-dark);
 				}
 			}
 		}
@@ -370,6 +506,20 @@
 					background-color: transparent;
 					color: var(--color-info-light);
 					border-color: var(--color-info-light);
+				}
+
+				&.active
+				{
+					background-color: var(--color-info);
+					color: var(--color-info-text);
+					border-color: var(--color-info-light);
+
+					&:hover:not(:disabled)
+					{
+						background-color: var(--color-info);
+						color: var(--color-info-light);
+						border-color: var(--color-info-light);
+					}
 				}
 			}
 		}
@@ -391,6 +541,17 @@
 			{
 				background-color: var(--color-success-dark);
 			}
+
+			&.active
+			{
+				background-color: var(--color-success-dark);
+				border-color: var(--color-success-light);
+
+				&:hover
+				{
+					color: var(--color-success-light);
+				}
+			}
 		}
 
 		&.text
@@ -404,6 +565,11 @@
 				{
 					background-color: transparent;
 					color: var(--color-success-light);
+				}
+
+				&.active
+				{
+					border-color: var(--color-success-dark);
 				}
 			}
 		}
@@ -421,6 +587,20 @@
 					background-color: transparent;
 					color: var(--color-success-light);
 					border-color: var(--color-success-light);
+				}
+
+				&.active
+				{
+					background-color: var(--color-success);
+					color: var(--color-success-text);
+					border-color: var(--color-success-light);
+
+					&:hover:not(:disabled)
+					{
+						background-color: var(--color-success);
+						color: var(--color-success-light);
+						border-color: var(--color-success-light);
+					}
 				}
 			}
 		}
