chore: Update UI catalog

--- a/dev/proto/ui_catalog/assets/scss/common/overflow.scss
+++ b/dev/proto/ui_catalog/assets/scss/common/overflow.scss
@@ -2,10 +2,18 @@
 //	Overflow
 //------------------------------------------------------------------------------
 
-.scroll
+.overflow_scroll
 {
 	overflow: scroll;
 
 	&_x { overflow-x: scroll; }
 	&_y { overflow-y: scroll; }
+}
+
+.overflow_hidden
+{
+	overflow: hidden;
+
+	&_x { overflow-x: hidden; }
+	&_y { overflow-y: hidden; }
 }
