--- a/dev/proto/ui_catalog/assets/scss/components/datas/index.scss
+++ b/dev/proto/ui_catalog/assets/scss/components/datas/index.scss
@@ -1,11 +1,5 @@
 //------------------------------------------------------------------------------
-//	Component styles
+//	Datas components
 //------------------------------------------------------------------------------
 
-@forward "datas/index";
-@forward "inputs/index";
-
-@forward "box";
-@forward "heading";
-@forward "icon";
-@forward "sidebar";
+@forward "list";
